# pixel-pilot

./: .dockerignore  .env.example  .gitignore  README.md  launch_eval.sh  notes_o1.md  profile_capture.py  profile_main.py  pyproject.toml
app/: action_system.py  audio_capture.py  main.py  window_capture.py
autocomply/: action_system.py  audio_capture.py  config.py  logger.py  main.py  utils.py  window_capture.py
eval/: check_environment.py  runner.py  terminal.txt  verification.py
eval/datasets/: __init__.py  manager.py  test_case.py  types.py
eval/docker/: Dockerfile  Dockerfile.x11  build.sh  docker-compose.yml  entrypoint.sh  run-eval.sh  test-x11.sh  wait-vnc.sh
eval/docker-old/: Dockerfile.x11  test-x11.sh
eval/docker/scripts/: container_entrypoint.sh  run-eval.sh  run.sh  setup_vnc.sh
eval/test_cases/: terminal_basic.json  verify.json
eval/test_cases/gui/: quiz_button.json  submit_form.json  wiki_main.json
eval/test_cases/terminal/: create_file.json  write_file.json
eval/tests/: __init__.py
examples/: quiz.html
experiments/uitars_coord_test/: uitars_experiment.py
pixelpilot/: action_system.py  action_utils.py  audio_capture.py  graph_system.py  gui_control.py  gui_control_docker.py  gui_control_eval.py  gui_control_host.py  gui_control_native.py  logger.py  main.py  models.py  openai_wrapper.py  output_system.py  state_management.py  system_control.py  system_control_docker.py  system_control_factory.py  system_control_native.py  system_control_scrapybara.py  tgi_wrapper.py  types.py  utils.py  visual_ops.py  window_capture.py
pixelpilot/llm/: tgi_llm.py
pixelpilot/llms/: tgi_wrapper.py
pixelpilot/tools/: __init__.py  keyboard.py  mouse.py  terminal.py
pixelpilot/util/: box_annotator.py
profiles/: aws_login.yml  quiz_debug.yml  review_browser.yml  review_scraper.yml  training.yml  training_course.yml
scripts/: run_desktop.sh  run_docker.sh  run_eval.sh  run_tests.sh
test/: test_parser.py  test_tgi.py  test_torch.py
tests/: conftest.py  quiz.html  test_action_system.py  test_dataset.py  test_fireworks.py  test_new_format.py  test_runner.py  test_scrapybara.py  test_tgi.py  test_torch.py  test_uitars.py  test_uitars_remote.py
tests/data/: test_page.html
tests/gui_control/: conftest.py  test_docker_gui.py  test_docker_gui_eval.py  test_eval.py  test_eval_gui.py  test_host.py  test_native_gui.py
