[project]
name = "auto-comply"
version = "0.1.0"
description = "AI agent for completing your workplace training courses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "inquirer>=3.4.0",
    "langgraph>=0.2.45",
    "langsmith>=0.1.142",
    "mss>=9.0.2",
    "numpy>=2.1.3",
    "openai>=1.54.3",
    "pillow>=11.0.0",
    "psutil>=6.1.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyobjc-framework-quartz>=10.3.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "sounddevice>=0.5.1",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F", "Q000"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
