[project]
name = "PixelPilot"
version = "0.1.0"
description = "AI agent for completing computer tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "click>=8.1.7",
    "debugpy>=1.8.8",
    "dill>=0.3.9",
    "easyocr>=1.7.2",
    "einops>=0.8.0",
    "inquirer>=3.4.0",
    "langchain-aws>=0.2.9",
    "langchain-community",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.2.6",
    "langgraph>=0.2.45",
    "langsmith>=0.1.142",
    "mss>=9.0.2",
    "openai>=1.54.3",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "psutil>=6.1.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "sounddevice>=0.5.1",
    "supervision>=0.25.0",
    "text-generation>=0.7.0",
    "timm>=1.0.11",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.2",
    "ultralytics>=8.3.23",
]

[project.optional-dependencies]
macos = [
    "pyobjc-framework-quartz>=10.3.1",
]
eval = [
    "click>=8.1.7",
    "rich>=13.9.4",
    "python-dotenv>=1.0.1",
    "langchain-community",
    "langchain-openai>=0.2.6",
    "openai>=1.54.3",
    "psutil>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F", "Q000"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.uv.sources]
langchain-community = { git = "https://github.com/hwchase17/langchain.git", subdirectory = "libs/community", rev = "master" }
